--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "gulp": "^3.9.0",
-    "gulp-jshint": "^1.11.0"
+    "gulp-connect": "^2.2.0"
   }
 }
