--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.4.0"
+    "angular": "~1.4.0",
+    "angular-ui-router": "~0.2.15"
   },
-  "devDependencies": {}
+  "homepage": "https://github.com/wilk/ict-group-demo"
 }
